--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Architect theme
-description: Architect is a theme for GitHub Pages.
+title: RE 397 Lab SessionA
+description: Use for Lab Session
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-architect
