--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: RE 397 Lab SessionA
-description: Use for Lab Session
-show_downloads: true
+title: RE397 Lab SessionA
+description: Used for Lab Session
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-architect
